# whirlpool

./: .clang-format  .clang-tidy  .gitmodules  .vvignores  CMakeLists.txt  Whirlpool.sln  conanfile.txt
.github/workflows/: cmake-single-platform.yml
TestWhirlpool/: CMakeLists.txt  TestWhirlpool.vcxproj  TestWhirlpool.vcxproj.filters
TestWhirlpool/src/: common.h  main.cxx  precomp.cxx
Whirlpool/: CMakeLists.txt  Whirlpool.vcxproj  Whirlpool.vcxproj.filters  gen-table.py
Whirlpool/include/: whirlpool.h
Whirlpool/src/: whirlpool.cxx  whirlpool.inc
include/: whirlpool.hpp
src/: CMakeLists.txt  gen-table.py  whirlpool.cpp  whirlpool.cxx  whirlpool.inc
test/: CMakeLists.txt  common.hpp  helper.cpp  helper.hpp  main.cpp  whirlpool.cpp
test/src/: common.h  main.cxx
